<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:padding="30dp"
    android:background="@color/blue_primary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_header"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            ></TextView>
        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:src="@drawable/logo_register"></ImageView>
    </LinearLayout>
    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:inputType="textShortMessage"
                android:hint="Ex : Andini Sodiman"></EditText>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:inputType="textEmailAddress"
                android:hint="Ex: example@mail.com"></EditText>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_no_hp"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/etNoHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:hint="Ex : 081236XXXXX"></EditText>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_role"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <Spinner
                android:id="@+id/spRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:entries="@array/role"></Spinner>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:inputType="textPassword"
                android:hint="**********"></EditText>
            <TextView
                android:id="@+id/lblKode"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kode"
                android:textColor="@color/blue_primary"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/etKode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:inputType="textShortMessage"
                android:hint="Masukkan Kode Laundry"></EditText>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_v2"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/btn_register_text"></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </ScrollView>
</LinearLayout>