<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/bgRightBlue"
        android:layout_width="16dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/blue_primary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue_primary"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:layout_toLeftOf="@+id/bgRightBlue"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_header"
                android:textSize="32sp"
                android:textStyle="bold"
                ></TextView>
            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_weight="0"
                android:src="@drawable/logo_login"></ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_primary"
            android:text="@string/label_email"
            android:textSize="24sp"
            android:layout_marginTop="53dp"
            ></TextView>
        <EditText
            android:id="@+id/etEmail"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="ex: loundryjaya@gmail.com"
            android:backgroundTint="@color/blue_primary"
            ></EditText>
        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_error"
            android:text="@string/label_email"
            android:visibility="gone"
            android:textSize="14sp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_primary"
            android:text="@string/label_password"
            android:textSize="24sp"
            android:layout_marginTop="37dp"
            ></TextView>
        <EditText
            android:id="@+id/etPass"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="**********"
            android:backgroundTint="@color/blue_primary"
            ></EditText>
        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_error"
            android:text="@string/label_email"
            android:visibility="gone"
            android:textSize="14sp"
            ></TextView>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_v2"
            android:text="@string/btn_login_text"
            android:textColor="@color/white"
            ></androidx.appcompat.widget.AppCompatButton>
        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_have_account"
            android:textColor="@color/link_click"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

</RelativeLayout>